--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = m5stack-cores3
 framework = arduino
+lib_deps = 
+	m5stack/M5CoreS3@^1.0.1
+	m5stack/M5Unified@^0.2.8
+	m5stack/M5GFX@^0.2.10
