improve platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:m5stack-cores3]
-platform = espressif32
+platform = espressif32@6.5.0
 board = m5stack-cores3
 framework = arduino
-lib_deps = 
+lib_deps =
 	m5stack/M5CoreS3@^1.0.1
 	m5stack/M5Unified@^0.2.8
 	m5stack/M5GFX@^0.2.10
+
+monitor_speed = 115200
+upload_speed = 921600
+
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
