--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = m5stack-cores3
+extra_configs = secrets.ini
+
 [env:m5stack-cores3]
 platform = espressif32@6.5.0
 board = m5stack-cores3
