--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,11 @@ extra_configs = secrets.ini
 platform = espressif32@6.5.0
 board = m5stack-cores3
 framework = arduino
-lib_deps =
+lib_deps = 
 	m5stack/M5CoreS3@^1.0.1
 	m5stack/M5Unified@^0.2.8
 	m5stack/M5GFX@^0.2.10
+	esp32async/ESPAsyncWebServer@^3.8.0
 
 monitor_speed = 115200
 upload_speed = 921600
