--- a/platformio.ini
+++ b/platformio.ini
@@ -21,10 +21,11 @@ lib_deps =
 	m5stack/M5Unified@^0.2.8
 	m5stack/M5GFX@^0.2.10
 	esp32async/ESPAsyncWebServer@^3.8.0
+	bblanchon/ArduinoJson@^7.4.2
 
 monitor_speed = 115200
 upload_speed = 921600
 
-build_flags =
+build_flags = 
   -D ARDUINO_USB_MODE=1
   -D ARDUINO_USB_CDC_ON_BOOT=1
