--- a/platformio.ini
+++ b/platformio.ini
@@ -22,10 +22,17 @@ lib_deps =
 	m5stack/M5GFX@^0.2.10
 	esp32async/ESPAsyncWebServer@^3.8.0
 	bblanchon/ArduinoJson@^7.4.2
+	https://github.com/pschatzmann/arduino-posix-fs.git
+  	https://github.com/pschatzmann/arduino-audio-tools.git#v0.9.8
+  	https://github.com/pschatzmann/arduino-espeak-ng.git
 
 monitor_speed = 115200
 upload_speed = 921600
 
-build_flags = 
-  -D ARDUINO_USB_MODE=1
-  -D ARDUINO_USB_CDC_ON_BOOT=1
+board_build.partitions = huge_app.csv
+build_flags =
+	-DESP32S3
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
